// Copyright 2023 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package grpc.service.helloworldservice;
option go_package = "github.com/pipe-cd/pipecd/pkg/app/helloworld/service";

import "validate/validate.proto";

service HelloWorld {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    enum Gender {
        GENDER_MALE = 0;
        GENDER_FEMALE = 1;
    }
    string name = 1 [(validate.rules).string.min_len = 1];
    Gender gender = 2;
}

message HelloResponse {
    string message = 1 [(validate.rules).string.min_len = 1];
}
